kubernetes/github-runners/base/arc-systems/deployment.yaml
---
# Source: gha-runner-scale-set-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arc-gha-rs-controller
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_38=Operators Require Use of Service Account Tokens
  namespace: github-arc-systems
  labels:
    helm.sh/chart: gha-rs-controller-0.13.0
    app.kubernetes.io/name: gha-rs-controller
    app.kubernetes.io/namespace: github-arc-systems
    app.kubernetes.io/instance: arc
    app.kubernetes.io/version: "0.13.0"
    app.kubernetes.io/part-of: gha-rs-controller
    app.kubernetes.io/managed-by: Helm
    actions.github.com/controller-service-account-namespace: github-arc-systems
    actions.github.com/controller-service-account-name: arc-gha-rs-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gha-rs-controller
      app.kubernetes.io/namespace: github-arc-systems
      app.kubernetes.io/instance: arc
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: "manager"
      labels:
        app.kubernetes.io/part-of: gha-rs-controller
        app.kubernetes.io/component: controller-manager
        app.kubernetes.io/version: 0.13.0
        app.kubernetes.io/name: gha-rs-controller
        app.kubernetes.io/namespace: github-arc-systems
        app.kubernetes.io/instance: arc
    spec:
      restartPolicy: Always
      serviceAccountName: arc-gha-rs-controller
      schedulerName: default-scheduler
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      containers:
        - name: manager
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          image: "ghcr.io/actions/gha-runner-scale-set-controller@sha256:4b98af135cd2768098fd8723ba3af4d1d7c9b4b1c3951b3649aa7a33fd4f4964"
          resources:
            limits:
              cpu: 10m
              memory: 256Mi
            requests:
              cpu: 5m
              memory: 128Mi
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          imagePullPolicy: IfNotPresent
          args:
            - "--auto-scaling-runner-set-only"
            - "--log-level=debug"
            - "--log-format=text"
            - "--runner-max-concurrent-reconciles=2"
            - "--update-strategy=immediate"
            - "--listener-metrics-addr=0"
            - "--listener-metrics-endpoint="
            - "--metrics-addr=0"
          command:
            - "/manager"
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      terminationGracePeriodSeconds: 10
      volumes:
        - name: tmp
          emptyDir: {}
      enableServiceLinks: false
